# Makefile.am: Automake template for bash-dot-files.
#
# Process this file with automake to create Makefile.in

bin_SCRIPTS =								\
	mount.image							\
	umount.image

AM_DEFAULT_SOURCE_EXT = .in

clean-local:
	rm -rf $(bin_SCRIPTS) Makefile.in autom4te.cache aclocal.m4 configure config.log config.status *~
